--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <h1 class="text-center">JavaScript Workshop</h1>
   <ul>
     <li><a href="./workshop01/index.html">Workshop01 Exchange Rate API</a></li>
+    <li><a href="./workshop02/index.html">Workshop02 Money Tracker</a></li>
   </ul>
 </body>
 </html>
