--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <ul>
     <li><a href="./workshop01/index.html">Workshop01 Exchange Rate API</a></li>
     <li><a href="./workshop02/index.html">Workshop02 Money Tracker</a></li>
+    <li><a href="./workshop03/index.html">Workshop03 Dark / Light Mode</a></li>
   </ul>
 </body>
 </html>
