--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <li><a href="./workshop01/index.html">Workshop01 Exchange Rate API</a></li>
     <li><a href="./workshop02/index.html">Workshop02 Money Tracker</a></li>
     <li><a href="./workshop03/index.html">Workshop03 Dark / Light Mode</a></li>
-    <li><a href="./workshop04/index.html">search lyric</a></li>
+    <li><a href="./workshop04/index.html">Workshop04 search lyric</a></li>
+    <li><a href="./workshop05/index.html">Workshop05 speed typing</a></li>
   </ul>
 </body>
 </html>
