--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="./workshop03/index.html">Workshop03 Dark / Light Mode</a></li>
     <li><a href="./workshop04/index.html">Workshop04 search lyric</a></li>
     <li><a href="./workshop05/index.html">Workshop05 speed typing</a></li>
+    <li><a href="./workshop06/index.html">Workshop06 Text Reveal</a></li>
   </ul>
 </body>
 </html>
