--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
   <h1 class="text-center">JavaScript Workshop</h1>
   <ul>
+    <li><a href="./react/index.html">My React Project</a></li>
     <li><a href="./workshop01/index.html">Workshop01 Exchange Rate API</a></li>
     <li><a href="./workshop02/index.html">Workshop02 Money Tracker</a></li>
     <li><a href="./workshop03/index.html">Workshop03 Dark / Light Mode</a></li>
     <li><a href="./workshop04/index.html">Workshop04 search lyric</a></li>
     <li><a href="./workshop05/index.html">Workshop05 speed typing</a></li>
     <li><a href="./workshop06/index.html">Workshop06 Text Reveal</a></li>
+    <li><a href="./workshop07/index.html">Workshop07 calculator</a></li>
   </ul>
 </body>
 </html>
