--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <h1 class="text-center">JavaScript Workshop</h1>
   <ul>
-    <li><a href="./react/index.html">My React Project</a></li>
+    <li><a href="./react01/index.html">React01 Spiner</a></li>
+    <li><a href="./react02/index.html">React02 Lotto</a></li>
     <li><a href="./workshop01/index.html">Workshop01 Exchange Rate API</a></li>
     <li><a href="./workshop02/index.html">Workshop02 Money Tracker</a></li>
     <li><a href="./workshop03/index.html">Workshop03 Dark / Light Mode</a></li>
